plugins {
    id 'org.springframework.boot' version '2.5.5'
    id 'war'
}

group = 'com.epam'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: securityStarterVersion

    implementation group: 'org.springframework', name: 'spring-web', version: springVersion
    implementation group: 'org.springframework', name: 'spring-webmvc', version: springVersion

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion

    implementation project(":service")
}

bootJar {
    archiveName 'certificates.jar'
}

war {
    archiveName 'app.war'
}